# zivid-nova

./: .gitignore  .nova  .yamllint  Dockerfile  LEGAL  README copy.md  README.md  mypy.ini  openapi.json  pylintrc  pyproject.toml  skaffold.yaml  tox.ini
.github/workflows/: build.yaml  catalog.yaml  lint.yaml  pr-title-check.yaml  release.yaml  yamllint.yaml
k8s/: app.yaml  kustomization.yaml
k8s-native/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
tests/: test_zivid.py
tests/models/: test_pose.py
zivid_nova/: __init__.py  __main__.py  app.py  utilities.py  zivid_app.py
zivid_nova/models/: calibration.py  calibration_residual.py  camera.py  capture_settings_preset.py  downsample_factor.py  infield_correction.py  pose.py
zivid_nova/resources/: Zivid2_Settings_Zivid_Two_M70_Default2D.yml  Zivid2_Settings_Zivid_Two_M70_ManufacturingDiffuse.yml  Zivid2_Settings_Zivid_Two_M70_ManufacturingSemiSpecular.yml  Zivid2_Settings_Zivid_Two_M70_ManufacturingSpecular.yml
zivid_nova/routes/: __init__.py  calibrations.py  cameras.py  infield_correction.py  projector.py
