[tool.poetry]
name = "zivid-nova"
version = "0.0.1"
description = "Nova plugin for Zivid 3D cameras."
authors = [
    "Patrick Schmager <patrick.schmager@wandelbots.com>",
    "André Kühnert <andre.kuehnert@wandelbots.com>",
]
include = [
    "zivid_nova"
]

[tool.poetry.dependencies]
python = ">=3.11, <=3.12.6"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
loguru = "^0.7.2"
python-decouple = "^3.8"
zivid = "2.13.1.2.13.1"
scipy = "^1.14.1"
pillow = "^10.4.0"
rerun-sdk = "^0.20.3"
point-cloud-utils = "^0.31.0"

[tool.poetry.extras]
all = ["zivid"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^8.2.0"
isort = "^5.13.2"
pylint = "^3.2.2"
mypy = "^1.10.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "zivid_nova:main"
generate-schema = "zivid_nova:generate_schema"

[tool.pytest.ini_options]
addopts = """
    --cov=zivid_nova
    --cov-report xml:reports/cov.xml
    --junitxml=reports/pytest.xml
    --import-mode=importlib"""
junit_family = "xunit2"
norecursedirs = "develop .ipynb_checkpoints .venv .tox *.egg"
testpaths = """
    tests
    docs
    zivid_nova
"""

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120